[metadata]
name = streamlit-job-scheduler
version = 0.1.0
description = Streamlit-based job scheduler UI with cron and one-time scheduling
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
platforms = any

[options]
packages = find:
include_package_data = True
install_requires =
    streamlit>=1.25.0
python_requires = >=3.8

[options.extras_require]
test =
    pytest
